@@ -1,3 +1,7 @@
+2016-02-11  Mark Wielaard  <mjw@redhat.com>
+
+	* relocate.c (relocate_section): Check result of gelf_update_* calls.
+
 2016-01-08  Mark Wielaard  <mjw@redhat.com>
 
 	* libdwfl_a_SOURCES: Unconditionally add gzip.c.
